--- a/src/app/shared/components/catalogue/thumbnail/thumbnail.component.scss
+++ b/src/app/shared/components/catalogue/thumbnail/thumbnail.component.scss
@@ -28,6 +28,7 @@
 
     .hover-text-wrapper {
       @include transition(transform 0.5s);
+      @include font-family();
       width: 100%;
       display: flex;
       flex-direction: column;
