--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,18 @@
-/* You can add global styles to this file, and also import other style files */
+@import './app/shared/styles/layout.scss';
+
 body {
   margin: 0;
+  padding: 0 200px;
+}
+
+@media screen and (max-width: $sm) {
+  body {
+    padding: 0 100px;
+  }
+}
+
+@media screen and (max-width: $xs) {
+  body {
+    padding: 0;
+  }
 }
