landing page update, component restructure etc..

--- a/src/app/blog/blog.component.scss
+++ b/src/app/blog/blog.component.scss
@@ -1,6 +1,6 @@
 @import '../shared/styles/layout';
 
-.library {
+.blog {
   min-height: calc(100vh - #{$navbar-height});
   display: flex;
   flex-direction: column;
