--- a/src/app/shared/styles/colors.scss
+++ b/src/app/shared/styles/colors.scss
@@ -16,6 +16,9 @@ $ludan-colors: (
     'light': #7b1a2d,
     'dark': #51111e
   ),
+  'grey': (
+    'base': #545556
+  ),
   'foreground': (
     'base': #191919,
     'light': #333333,
