--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,31 +1,7 @@
 @import './shared/styles/layout.scss';
 
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 40px 40px 0 40px;
-
-  img {
-    height: 40px;
-    cursor: pointer;
-    outline: none;
-  }
-}
-
-main {
-  padding: 0 200px;
-  min-height: calc(100vh - 76px);
-}
-
-@media screen and (max-width: $sm) {
-  main {
-    padding: 0 100px;
-  }
-}
-
-@media screen and (max-width: $xs) {
-  main {
-    padding: 0;
-  }
+.content {
+  box-sizing: border-box;
+  position: relative;
+  padding-top: $navbar-height;
 }
