--- a/src/app/overview/overview.component.scss
+++ b/src/app/overview/overview.component.scss
@@ -1,27 +1,46 @@
 @import '../shared/styles/mixins';
 @import '../shared/styles/layout';
+@import '../shared/styles/colors';
 
 .overview {
   @include font-family();
 }
 
-.landing-wrapper {
-  height: calc(100vh - 76px);
+.landing {
+  height: calc(100vh - #{$navbar-height});
+  width: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 
-  .dynamic-text {
+  &__role {
+    @include font-size(60px);
+    margin-top: 0;
+    margin-bottom: 20px;
+  }
+
+  &__description {
     @include font-size(30px);
-    width: 480px;
-    height: 145px;
-    z-index: 1;
+    padding: 0 80px;
+    text-align: center;
+    margin: 0;
+    color: ludan-color('grey');
   }
 }
 
-.catalogue-wrapper {
-  height: 800px;
-  margin-bottom: 100px;
+.portfolio,
+.blog,
+.library {
+  padding: 0 80px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+
+  .catalogue {
+    flex-grow: 1;
+    position: relative;
+  }
 }
 
 // .overview-text {
