--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -1,6 +1,6 @@
 @import '../shared/styles/layout';
 
-.library {
+.portfolio {
   min-height: calc(100vh - #{$navbar-height});
   display: flex;
   flex-direction: column;
