--- a/src/app/overview/overview.component.scss
+++ b/src/app/overview/overview.component.scss
@@ -32,8 +32,7 @@
 .portfolio,
 .blog,
 .library {
-  padding: 0 80px;
-  min-height: 100vh;
+  padding: 0 80px 40px 80px;
   display: flex;
   flex-direction: column;
 
