--- a/src/app/shared/components/catalogue/thumbnail/thumbnail.component.scss
+++ b/src/app/shared/components/catalogue/thumbnail/thumbnail.component.scss
@@ -2,14 +2,27 @@
 @import '../../../styles/mixins';
 
 .thumbnail {
-  width: 100%;
   height: 100%;
-  position: relative;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-  @include background-size(cover);
+  > div {
+    position: relative;
+  }
+
+  img {
+    width: 100%;
+    max-width: 600px;
+    height: auto;
+    display: table;
+    margin: 0 auto;
+  }
 
   .hover-container {
     position: absolute;
+    top: 0;
     opacity: 0.7;
     width: 100%;
     height: 100%;
@@ -23,6 +36,7 @@
 
       .hover-text-wrapper {
         @include transform(translateY(0px));
+        opacity: 1;
       }
     }
 
@@ -35,6 +49,7 @@
       align-items: center;
       justify-content: center;
       @include transform(translateY(20px));
+      opacity: 0;
 
       .title {
         padding: 10px 0;
