--- a/src/app/shared/styles/colors.scss
+++ b/src/app/shared/styles/colors.scss
@@ -2,7 +2,7 @@ $ludan-color-key: 'base' !default;
 
 $ludan-colors: (
   'primary': (
-    'base': #8e3329,
+    'base': #8c44ff,
     'light': #d9534f,
     'dark': #c9302c
   ),
