cleaned up the library work and removed link to other parts

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,4 +4,5 @@
   box-sizing: border-box;
   position: relative;
   padding-top: $navbar-height;
+  min-height: calc(100vh - #{$navbar-height} - #{$footer-height});
 }
