--- a/src/app/overview/overview.component.scss
+++ b/src/app/overview/overview.component.scss
@@ -32,9 +32,9 @@
 .portfolio,
 .blog,
 .library {
-  padding: 0 80px 40px 80px;
   display: flex;
   flex-direction: column;
+  padding: 0 80px 40px 80px;
 
   .catalogue {
     flex-grow: 1;
@@ -58,6 +58,7 @@
   margin: -80px 10% 0 10%;
   background: white;
   padding-top: 40px;
+  margin-bottom: 80px;
 
   h3 {
     margin-top: 0;
