--- a/src/app/shared/components/catalogue/catalogue.component.scss
+++ b/src/app/shared/components/catalogue/catalogue.component.scss
@@ -1,5 +1,10 @@
 .catalogue {
+  padding-bottom: 20px;
+
   ludan-thumbnail {
-    padding: 5px;
+    padding: 20px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
