--- a/src/app/shared/components/catalogue/thumbnail/thumbnail.component.scss
+++ b/src/app/shared/components/catalogue/thumbnail/thumbnail.component.scss
@@ -2,12 +2,13 @@
 @import '../../../styles/mixins';
 
 .thumbnail {
+  max-width: 400px;
   height: 100%;
   width: 100%;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   display: flex;
   align-items: center;
   justify-content: center;
-
   > div {
     position: relative;
   }
@@ -23,24 +24,35 @@
   .hover-container {
     position: absolute;
     top: 0;
-    opacity: 0.7;
     width: 100%;
     height: 100%;
     color: white;
     display: flex;
     cursor: pointer;
-    @include transition(background-color 0.5s);
+    opacity: 0;
 
     &:hover {
-      background: ludan-color('accent', 'dark');
+      opacity: 1;
+      .hover-container__background {
+        background: ludan-color('primary');
+      }
 
-      .hover-text-wrapper {
+      .hover-container__content {
         @include transform(translateY(0px));
-        opacity: 1;
       }
     }
 
-    .hover-text-wrapper {
+    .hover-container__background {
+      @include transition(background-color 0.5s);
+      opacity: 0.7;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+    }
+
+    .hover-container__content {
       @include transition(transform 0.5s);
       @include font-family();
       width: 100%;
@@ -49,7 +61,6 @@
       align-items: center;
       justify-content: center;
       @include transform(translateY(20px));
-      opacity: 0;
 
       .title {
         padding: 10px 0;
