--- a/src/app/shared/styles/colors.scss
+++ b/src/app/shared/styles/colors.scss
@@ -17,7 +17,8 @@ $ludan-colors: (
     'dark': #51111e
   ),
   'grey': (
-    'base': #545556
+    'base': #545556,
+    'light': #dddddd
   ),
   'foreground': (
     'base': #191919,
