--- a/src/app/overview/components/skills/skills.component.scss
+++ b/src/app/overview/components/skills/skills.component.scss
@@ -1,11 +1,11 @@
 @import '../../../shared/styles/colors';
+@import '../../../shared/styles/layout';
 
 .skills {
-  border: 1px solid ludan-color('grey');
+  border: 1px solid ludan-color('grey', 'light');
   border-radius: 10px;
   margin: -80px 10% 0 10%;
   background: white;
-  padding-top: 40px;
   margin-bottom: 80px;
 
   h3 {
@@ -13,9 +13,22 @@
   }
 
   &__section {
-    margin-bottom: 40px;
     text-align: center;
-    padding: 0 2%;
+    padding: 20px;
+
+    @media only screen and (max-width: $sm) {
+      &:not(:last-child) {
+        border-right: 0;
+        border-bottom: 1px solid ludan-color('grey', 'light');
+      }
+    }
+
+    @media only screen and (min-width: $gt-sm) {
+      &:not(:last-child) {
+        border-right: 1px solid ludan-color('grey', 'light');
+        border-bottom: 0;
+      }
+    }
 
     p {
       line-height: 24px;
