--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,6 @@
 .content {
   box-sizing: border-box;
   position: relative;
-  padding-top: $navbar-height;
+  // padding-top: $navbar-height;
   min-height: calc(100vh - #{$navbar-height} - #{$footer-height});
 }
