--- a/src/app/overview/overview.component.scss
+++ b/src/app/overview/overview.component.scss
@@ -1,6 +1,6 @@
-@import '../shared/styles/mixins';
 @import '../shared/styles/layout';
 @import '../shared/styles/colors';
+@import '../shared/styles/typography';
 
 .overview {
   @include font-family();
@@ -15,13 +15,13 @@
   justify-content: center;
 
   &__role {
-    @include font-size(60px);
-    margin-top: 0;
+    @include fluid-type(320px, 1200px, 30px, 60px);
+    margin-top: -#{$navbar-height};
     margin-bottom: 20px;
   }
 
   &__description {
-    @include font-size(30px);
+    @include fluid-type(320px, 1200px, 15px, 30px);
     padding: 0 80px;
     text-align: center;
     margin: 0;
@@ -36,6 +36,10 @@
   flex-direction: column;
   padding: 0 80px 40px 80px;
 
+  @media only screen and (max-width: $sm) {
+    padding: 0px 40px 40px 40px;
+  }
+
   .catalogue {
     flex-grow: 1;
     position: relative;
@@ -47,12 +51,20 @@
   padding: 80px 20% 200px 20%;
   text-align: center;
 
+  @media only screen and (max-width: $sm) {
+    padding: 40px 20px 130px 20px;
+  }
+
   &__title {
-    @include font-size(26px);
+    @include fluid-type(320px, 1200px, 18px, 26px);
   }
 
   &__text {
     line-height: 30px;
-    @include font-size(18px);
+    @include fluid-type(320px, 1200px, 14px, 18px);
+
+    @media only screen and (max-width: $sm) {
+      line-height: 24px;
+    }
   }
 }
