--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -1,5 +1,7 @@
 @import '../../styles/colors';
-@import '../../styles/mixins.scss';
+@import '../../styles/mixins';
+@import '../../styles/typography';
+@import '../../styles/layout';
 
 .footer {
   @include font-family();
@@ -19,12 +21,12 @@
     }
 
     .text {
-      @include font-size(30px);
+      @include fluid-type(320px, 1200px, 15px, 30px);
       height: 100%;
     }
 
     .text-hover {
-      @include font-size(16px);
+      @include fluid-type(320px, 1200px, 8px, 16px);
       color: white;
       background: ludan-color('primary');
       height: 0;
@@ -51,12 +53,21 @@
     align-items: center;
 
     .copyright {
+      @include fluid-type(320px, 1200px, 12px, 16px);
     }
+
     .socials {
+      display: flex;
+      align-items: center;
+
       img {
         width: 28px;
         margin: 0 10px;
         cursor: pointer;
+
+        @media only screen and (max-width: $sm) {
+          width: 20px;
+        }
       }
     }
   }
