--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,4 +5,7 @@
   position: relative;
   // padding-top: $navbar-height;
   min-height: calc(100vh - #{$navbar-height} - #{$footer-height});
+  @media only screen and (max-width: $sm) {
+    min-height: calc(100vh - #{$navbar-height-sm} - #{$footer-height-sm});
+  }
 }
