--- a/src/app/overview/overview.component.scss
+++ b/src/app/overview/overview.component.scss
@@ -8,6 +8,9 @@
 
 .landing {
   height: calc(100vh - #{$navbar-height});
+  @media only screen and (max-width: $sm) {
+    height: calc(100vh - #{$navbar-height-sm});
+  }
   width: 100%;
   display: flex;
   flex-direction: column;
