--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -6,9 +6,13 @@
 .footer {
   @include font-family();
   overflow: auto;
+  height: $footer-height;
+  @media only screen and (max-width: $sm) {
+    height: $footer-height-sm;
+  }
 
   .call-to-action {
-    height: 100px;
+    height: 60%;
     background: ludan-color('background');
 
     .text,
@@ -47,10 +51,11 @@
   }
 
   .bottom-row {
-    margin: 20px 40px;
+    height: 40%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0 20px;
 
     .copyright {
       @include fluid-type(320px, 1200px, 12px, 16px);
