--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -15,6 +15,9 @@ nav {
   align-items: center;
   padding: 0 40px;
   height: $navbar-height;
+  @media only screen and (max-width: $sm) {
+    height: $navbar-height-sm;
+  }
   z-index: 2;
 
   @media only screen and (max-width: $sm) {
@@ -37,6 +40,10 @@ nav {
     height: 40px;
     cursor: pointer;
     outline: none;
+
+    @media only screen and (max-width: $sm) {
+      height: 30px;
+    }
   }
 
   ul {
