--- a/src/app/shared/styles/layout.scss
+++ b/src/app/shared/styles/layout.scss
@@ -18,4 +18,6 @@ $gt-lg: 1920px;
 $xl: 1920px;
 
 $navbar-height: 50px;
-$footer-height: 172px;
+$navbar-height-sm: 40px;
+$footer-height: 160px;
+$footer-height-sm: 120px;
