fix relative path for scss

--- a/src/app/shared/components/catalogue/thumbnail/thumbnail.component.scss
+++ b/src/app/shared/components/catalogue/thumbnail/thumbnail.component.scss
@@ -1,6 +1,6 @@
-@import '../../../styles/colors';
-@import '../../../styles/mixins';
-@import '../../../styles/typography';
+@import 'colours';
+@import 'mixins';
+@import 'typography';
 
 .thumbnail {
   max-width: 400px;
