--- a/src/app/overview/components/skills/skills.component.scss
+++ b/src/app/overview/components/skills/skills.component.scss
@@ -1,5 +1,5 @@
-@import '../../../shared/styles/colors';
-@import '../../../shared/styles/layout';
+@import 'colours';
+@import 'layout';
 
 .skills {
   border: 1px solid ludan-color('grey', 'light');
