--- a/src/app/overview/overview.component.scss
+++ b/src/app/overview/overview.component.scss
@@ -1,6 +1,6 @@
-@import '../shared/styles/layout';
-@import '../shared/styles/colors';
-@import '../shared/styles/typography';
+@import 'layout';
+@import 'colours';
+@import 'typography';
 
 .overview {
   @include font-family();
