--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -1,7 +1,7 @@
-@import '../../styles/colors';
-@import '../../styles/mixins';
-@import '../../styles/typography';
-@import '../../styles/layout';
+@import 'colours';
+@import 'mixins';
+@import 'typography';
+@import 'layout';
 
 .footer {
   @include font-family();
