--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -65,10 +65,14 @@
       display: flex;
       align-items: center;
 
-      img {
+      svg {
         width: 28px;
         margin: 0 10px;
         cursor: pointer;
+
+        &:hover {
+          fill: ludan-color('primary');
+        }
 
         @media only screen and (max-width: $sm) {
           width: 20px;
