--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -15,12 +15,12 @@ nav {
   align-items: center;
   padding: 0 40px;
   height: $navbar-height;
-  @media only screen and (max-width: $sm) {
+  @media only screen and (max-width: $xs) {
     height: $navbar-height-sm;
   }
   z-index: 2;
 
-  @media only screen and (max-width: $sm) {
+  @media only screen and (max-width: $xs) {
     padding: 0 20px;
   }
 
@@ -41,7 +41,7 @@ nav {
     cursor: pointer;
     outline: none;
 
-    @media only screen and (max-width: $sm) {
+    @media only screen and (max-width: $xs) {
       height: 30px;
     }
   }
