--- a/src/app/shared/styles/colours.scss
+++ b/src/app/shared/styles/colours.scss
@@ -18,7 +18,8 @@ $ludan-colors: (
   ),
   'grey': (
     'base': #545556,
-    'light': #dddddd
+    'light': #dddddd,
+    'extra-light': #eeeeee
   ),
   'foreground': (
     'base': #191919,
