--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -3,80 +3,66 @@
 @import 'typography';
 @import 'layout';
 
+$call-to-action-height: 40px;
+
 .footer {
+  margin-top: 50px;
   @include font-family();
-  overflow: auto;
-  height: $footer-height;
-  @media only screen and (max-width: $sm) {
-    height: $footer-height-sm;
-  }
+  background: ludan-color('primary');
+  position: relative;
+  padding-top: calc(#{$call-to-action-height/2});
+}
 
-  .call-to-action {
-    height: 60%;
-    background: ludan-color('background');
+.call-to-action {
+  position: absolute;
+  width: 80%;
+  left: 10%;
+  top: -20px;
+  height: $call-to-action-height;
+  border: 1px solid ludan-color('grey', 'light');
+  border-radius: 10px;
+  background: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: ludan-color('primary');
+  @include fluid-type(320px, 1200px, 18px, 24px);
+  cursor: pointer;
+  // transition-duration: 300ms;
 
-    .text,
-    .text-hover {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      @include transition(height 0.5s, opacity 0.2s);
-      cursor: pointer;
-    }
+  // &:hover {
+  //   border-color: white;
+  //   color: white;
+  //   background: ludan-color('primary');
+  // }
+}
 
-    .text {
-      @include fluid-type(320px, 1200px, 15px, 30px);
-      height: 100%;
-    }
+.bottom-container {
+  padding-bottom: 50px;
+  padding-top: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
 
-    .text-hover {
-      @include fluid-type(320px, 1200px, 8px, 16px);
-      color: white;
-      background: ludan-color('primary');
-      height: 0;
-      opacity: 0;
-    }
-
-    &:hover {
-      .text {
-        height: 0;
-        opacity: 0;
-      }
-
-      .text-hover {
-        height: 100%;
-        opacity: 1;
-      }
-    }
-  }
-
-  .bottom-row {
-    height: 40%;
+  .socials {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 0 20px;
+    margin-bottom: 20px;
 
-    .copyright {
-      @include fluid-type(320px, 1200px, 12px, 16px);
-    }
+    svg {
+      width: 28px;
+      margin: 0 10px;
+      cursor: pointer;
+      fill: white;
+      transition-duration: 300ms;
 
-    .socials {
-      display: flex;
-      align-items: center;
+      &:hover {
+        transform: scale(1.2);
+      }
 
-      svg {
-        width: 28px;
-        margin: 0 10px;
-        cursor: pointer;
-
-        &:hover {
-          fill: ludan-color('primary');
-        }
-
-        @media only screen and (max-width: $sm) {
-          width: 20px;
-        }
+      @media only screen and (max-width: $sm) {
+        width: 20px;
       }
     }
   }
