--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -2,16 +2,11 @@
 @import 'layout';
 @import 'colours';
 @import 'typography';
-@import 'animation';
-
-$overlay-animation-duration: 200ms;
-$fly-in-animation-duration: 200ms;
 
 .navbar {
   @include fluid-type(320px, 1200px, 18px, 26px);
   @include font-family();
 
-  // position: fixed;
   box-sizing: border-box;
   width: 100%;
   display: flex;
@@ -66,12 +61,11 @@ $fly-in-animation-duration: 200ms;
     right: 0;
     bottom: 0;
     background: black;
-    opacity: 0.6;
+    opacity: 0.5;
     z-index: 10;
-    animation: half-fade-in $overlay-animation-duration forwards;
+    cursor: pointer;
 
     &.hidden {
-      animation: fade-out $overlay-animation-duration forwards $fly-in-animation-duration;
       pointer-events: none;
     }
 
@@ -80,41 +74,21 @@ $fly-in-animation-duration: 200ms;
     }
   }
 
-  .links {
+  .nav {
     display: flex;
     list-style-type: none;
     margin: 0;
     padding: 0;
     z-index: 10;
 
-    @media only screen and (max-width: $sm) {
-      flex-direction: column;
-      position: absolute;
-      right: 0;
-      top: 0px;
-      width: 120px;
-      height: 100%;
-      background: white;
-      animation: slide-left $fly-in-animation-duration forwards
-        $overlay-animation-duration;
-      transform: translateX(100%);
-      padding: 10px;
-
-      &.hidden {
-        animation: slide-right $fly-in-animation-duration forwards;
-      }
-    }
-
     .link {
       padding: 2px 0;
       margin: 0 1px;
       width: 120px;
-      text-align: center;
-      cursor: pointer;
 
-      @media only screen and (max-width: $sm) {
-        text-align: left;
-        margin-bottom: 10px;
+      &.active::after {
+        width: 100%;
+        background: ludan-color('primary');
       }
 
       &::after {
@@ -123,17 +97,47 @@ $fly-in-animation-duration: 200ms;
         width: 0;
         height: 2px;
         background: #000;
+      }
+    }
+  }
+
+  .nav-xl {
+    @media only screen and (max-width: $sm) {
+      display: none;
+    }
+
+    .link {
+      text-align: center;
+      cursor: pointer;
+
+      &::after {
         @include transition(width 0.2s);
       }
 
       &:not(.active):hover::after {
         width: 100%;
       }
+    }
+  }
 
-      &.active::after {
-        width: 100%;
-        background: ludan-color('primary');
-      }
+  .nav-xs {
+    @media only screen and (min-width: $sm) {
+      display: none;
+    }
+
+    margin-bottom: 10px;
+    box-sizing: border-box;
+    flex-direction: column;
+    position: fixed;
+    right: 0;
+    top: 0px;
+    width: 120px;
+    height: 100%;
+    background: white;
+    padding: 10px;
+
+    .link {
+      text-align: left;
     }
   }
 }
