--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -23,18 +23,6 @@
     padding: 0 20px;
   }
 
-  &.colored {
-    background: ludan-color('primary');
-
-    li {
-      color: white;
-
-      &::after {
-        background: white !important;
-      }
-    }
-  }
-
   .logo {
     height: 40px;
     cursor: pointer;
@@ -83,8 +71,6 @@
 
     .link {
       padding: 2px 0;
-      margin: 0 1px;
-      width: 120px;
 
       &.active::after {
         width: 100%;
@@ -109,6 +95,14 @@
     .link {
       text-align: center;
       cursor: pointer;
+
+      &:not(:first-child) {
+        margin-left: 20px;
+      }
+
+      &:not(:last-child) {
+        margin-right: 20px;
+      }
 
       &::after {
         @include transition(width 0.2s);
