--- a/src/app/blog/blog-item/blog-item.component.scss
+++ b/src/app/blog/blog-item/blog-item.component.scss
@@ -1,6 +1,6 @@
-@import 'colours';
-@import 'typography';
-@import 'layout';
+@import '../../shared/styles/colours';
+@import '../../shared/styles/typography';
+@import '../../shared/styles/layout';
 
 .blog-item {
   padding: 40px 20px;
