--- a/src/app/overview/overview.component.scss
+++ b/src/app/overview/overview.component.scss
@@ -1,6 +1,6 @@
-@import 'layout';
-@import 'colours';
-@import 'typography';
+@import '../shared/styles/layout';
+@import '../shared/styles/colours';
+@import '../shared/styles/typography';
 
 .overview {
   @include font-family();
