--- a/src/app/overview/components/skills/skills.component.scss
+++ b/src/app/overview/components/skills/skills.component.scss
@@ -1,5 +1,5 @@
-@import 'colours';
-@import 'layout';
+@import '../../../shared/styles/colours';
+@import '../../../shared/styles/layout';
 
 .skills {
   border: 1px solid ludan-color('grey', 'light');
