--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -1,7 +1,7 @@
-@import 'colours';
-@import 'mixins';
-@import 'typography';
-@import 'layout';
+@import '../../styles/colours';
+@import '../../styles/mixins';
+@import '../../styles/typography';
+@import '../../styles/layout';
 
 $call-to-action-height: 40px;
 
