--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -1,7 +1,7 @@
-@import 'mixins';
-@import 'layout';
-@import 'colours';
-@import 'typography';
+@import '../../styles/mixins';
+@import '../../styles/layout';
+@import '../../styles/colours';
+@import '../../styles/typography';
 
 .navbar {
   @include fluid-type(320px, 1200px, 18px, 26px);
