--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -12,7 +12,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 40px;
+  padding: 0 $side-margin;
   height: $navbar-height;
   @media only screen and (max-width: $xs) {
     height: $navbar-height-sm;
