--- a/src/app/shared/styles/layout.scss
+++ b/src/app/shared/styles/layout.scss
@@ -21,4 +21,5 @@ $navbar-height: 50px;
 $navbar-height-sm: 50px;
 $footer-height: 160px;
 $footer-height-sm: 120px;
-$side-margin: 50px;
+$side-margin: 20%;
+$side-margin-xs: 20px;
