--- a/src/app/shared/styles/post-header.scss
+++ b/src/app/shared/styles/post-header.scss
@@ -1,3 +1,7 @@
+.section {
+  padding: 10px 0;
+}
+
 .title {
   margin: 0;
   font-weight: 600;
@@ -6,7 +10,7 @@
 }
 
 .subtitle {
-  margin: 0;
+  // margin-top: 0;
   @include fluid-type(320px, 1200px, 12px, 14px);
   font-style: italic;
   font-weight: 400;
