--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -125,13 +125,14 @@
     position: fixed;
     right: 0;
     top: 0px;
-    width: 120px;
+    width: 200px;
     height: 100%;
     background: white;
     padding: 10px;
 
     .link {
       text-align: left;
+      margin: 5px 0;
     }
   }
 }
