update color scheme

--- a/src/app/shared/styles/colours.scss
+++ b/src/app/shared/styles/colours.scss
@@ -4,7 +4,7 @@ $ludan-colors: (
   'primary': (
     'base': #e3875a,
     'light': #d9534f,
-    'dark': #c9302c
+    'dark': #e0682d
   ),
   'accent': (
     'base': #f44336,
