adds React Masking

--- a/src/app/blog/blog-item/blog-item.component.scss
+++ b/src/app/blog/blog-item/blog-item.component.scss
@@ -5,6 +5,8 @@
 @import '../../shared/styles/post-header';
 
 .blog-item {
+  padding-bottom: 40px;
+
   .datePublished,
   .keywords,
   .dateModiefied {
