--- a/src/app/shared/components/catalogue/catalogue.component.scss
+++ b/src/app/shared/components/catalogue/catalogue.component.scss
@@ -1,8 +1,13 @@
+@import '../../../shared/styles/layout';
+
 .catalogue {
-  padding-bottom: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 20px;
+  justify-content: center;
 
   ludan-thumbnail {
-    padding: 20px 0;
+    padding: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
