improve the thumbnail

--- a/src/app/shared/styles/colours.scss
+++ b/src/app/shared/styles/colours.scss
@@ -62,8 +62,8 @@ $ludan-opacity: (
 }
 
 // Examples
-// background-color: scotch-color('primary');
-// background-color: scotch-color('primary', 'light');
-// background-color: scotch-color('secondary');
-// background-color: scotch-color('secondary', 'dark');
-// background-color: scotch-color('primary', $opacity: 'light');
+// background-color: ludan-color('primary');
+// background-color: ludan-color('primary', 'light');
+// background-color: ludan-color('secondary');
+// background-color: ludan-color('secondary', 'dark');
+// background-color: ludan-color('primary', $opacity: 'light');
