--- a/src/app/shared/components/catalogue/thumbnail/thumbnail.component.scss
+++ b/src/app/shared/components/catalogue/thumbnail/thumbnail.component.scss
@@ -3,6 +3,8 @@
 @import '../../../styles/typography';
 
 .thumbnail {
+  @include font-family();
+
   max-width: 400px;
   height: 100%;
   width: 100%;
@@ -11,68 +13,56 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  > div {
-    position: relative;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+
+  &:hover {
+    .hover-background {
+      background: ludan-color('primary');
+    }
+
+    .image {
+      transform: scale(1.02);
+    }
   }
 
-  img {
+  .image {
     width: 100%;
-    max-width: 600px;
-    height: auto;
-    display: table;
-    margin: 0 auto;
+    transition: transform 0.2s;
   }
 
-  .hover-container {
+  .hover-background {
+    @include transition(background-color 0.5s);
+    opacity: 0.3;
     position: absolute;
     top: 0;
-    width: 100%;
-    height: 100%;
-    color: white;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+
+  .sloped-edge {
+    position: absolute;
+    width: 110%;
+    background: ludan-color('primary');
+    z-index: 1;
+    height: 100px;
+    bottom: -5%;
+    left: -5%;
+    transform: rotate(-3deg);
+    border-top: 1px solid ludan-color('grey', 'light');
+  }
+
+  .figcaption {
+    position: absolute;
     display: flex;
-    cursor: pointer;
-    opacity: 0;
-
-    &:hover {
-      opacity: 1;
-      .hover-container__background {
-        background: ludan-color('primary');
-      }
-
-      .hover-container__content {
-        @include transform(translateY(0px));
-      }
-    }
-
-    .hover-container__background {
-      @include transition(background-color 0.5s);
-      opacity: 0.7;
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-    }
-
-    .hover-container__content {
-      @include transition(transform 0.5s);
-      @include font-family();
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      @include transform(translateY(20px));
-
-      .title {
-        text-align: center;
-        padding: 10px 10px;
-        @include fluid-type(320px, 1200px, 10px, 20px);
-      }
-
-      .subtitle {
-        @include fluid-type(320px, 1200px, 8px, 16px);
-      }
-    }
+    align-items: center;
+    bottom: 10px;
+    height: 60px;
+    left: 20px;
+    right: 20px;
+    z-index: 1;
+    color: white;
   }
 }
