--- a/src/app/blog/blog-item/blog-item.component.scss
+++ b/src/app/blog/blog-item/blog-item.component.scss
@@ -16,6 +16,7 @@
   .image {
     width: auto;
     height: auto;
+    max-height: 400px;
     max-width: 100%;
     margin: auto;
     display: block;
@@ -33,7 +34,7 @@
     ::ng-deep h3 {
       color: ludan-color('primary');
       font-weight: 500;
-      @include fluid-type(320px, 1200px, 20px, 34px);
+      @include fluid-type(320px, 1200px, 20px, 32px);
     }
 
     ::ng-deep code {
