--- a/src/app/shared/components/catalogue/thumbnail/thumbnail.component.scss
+++ b/src/app/shared/components/catalogue/thumbnail/thumbnail.component.scss
@@ -6,9 +6,10 @@
   @include font-family();
 
   max-width: 400px;
+  min-width: 300px;
   height: 100%;
-  width: 100%;
   min-height: 250px;
+  flex-grow: 1;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   display: flex;
   align-items: center;
