--- a/src/app/shared/components/catalogue/thumbnail/thumbnail.component.scss
+++ b/src/app/shared/components/catalogue/thumbnail/thumbnail.component.scss
@@ -1,15 +1,11 @@
 @import '../../../styles/colours.scss';
-@import '../../../styles/mixins';
 @import '../../../styles/typography';
 
 .thumbnail {
   @include font-family();
 
-  max-width: 400px;
-  min-width: 300px;
-  height: 100%;
-  min-height: 250px;
-  flex-grow: 1;
+  width: 400px;
+  height: 400px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   display: flex;
   align-items: center;
@@ -24,7 +20,7 @@
     }
 
     .image {
-      transform: scale(1.02);
+      transform: scale(1.1);
     }
   }
 
@@ -33,8 +29,11 @@
     transition: transform 0.2s;
   }
 
+  .plop {
+    width: 100%;
+  }
+
   .hover-background {
-    @include transition(background-color 0.5s);
     opacity: 0.3;
     position: absolute;
     top: 0;
